various fixes, make member pool_id optional
